Fixed spacing on Chapters 10-12

--- a/public/assets/styles/acts10_12.css
+++ b/public/assets/styles/acts10_12.css
@@ -66,8 +66,8 @@
 }
 
 .spacing {
+  height: 5500px;
   position: absolute;
-  height: 1000%;
 }
 
 .title2 {
